--- a/simias/src/server/Simias.HttpFile/AssemblyInfo.cs.in
+++ b/simias/src/server/Simias.HttpFile/AssemblyInfo.cs.in
@@ -55,5 +55,5 @@ using System.Runtime.CompilerServices;
 //       documentation for more information on this.
 //
 [assembly: AssemblyDelaySign(false)]
-[assembly: AssemblyKeyFile("../../../iFolder.snk")]
+[assembly: AssemblyKeyFile("")]
 [assembly: AssemblyKeyName("")]
