--- a/simias/src/server/Simias.Rss/Makefile.am
+++ b/simias/src/server/Simias.Rss/Makefile.am
@@ -1,7 +1,7 @@
 # handle Mono secondary dependencies
 export MONO_PATH := $(MONO_PATH):$(DESTDIR)$(libdir)
 
-SimiasRss_CSFILES = $(srcdir)/AssemblyInfo.cs $(srcdir)/Channel.cs $(srcdir)/Item.cs $(srcdir)/RssFeed.cs $(srcdir)/PublicFeedHandler.cs $(srcdir)/RssHeaders.cs  $(srcdir)/Util.cs 
+SimiasRss_CSFILES = $(srcdir)/Channel.cs $(srcdir)/Item.cs $(srcdir)/RssFeed.cs $(srcdir)/PublicFeedHandler.cs $(srcdir)/RssHeaders.cs  $(srcdir)/Util.cs 
 SimiasRss_CSFILES_CSC := $(subst /,$(SEP),$(SimiasRss_CSFILES))
 SimiasRss_INCLUDES =
 SimiasRss_RESOURCES =
@@ -9,7 +9,7 @@ SimiasRss_FLAGS = $(CSC_LIBFLAG)
 SimiasRss_LIBPATH = ../Simias.HttpFile ../../core/SimiasLib.dll ../../core/SimiasClient $(DESTDIR)$(webbindir)
 SimiasRss_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasLib.dll SimiasClient.dll Simias.HttpFile.dll
 
-EXTRA_DIST = rss.ashx pubrss.ashx $(SimiasRss_CSFILES) 
+EXTRA_DIST = rss.ashx pubrss.ashx $(SimiasRss_CSFILES) AssemblyInfo.cs.in
 
 if MAKE_DOC_FILE
 DOC_FILE = $(basename $@).doc.xml
@@ -19,8 +19,8 @@ endif
 
 SERVER_ASSEMBLIES := Simias.Rss.dll
 
-Simias.Rss.dll: $(SimiasRss_CSFILES) $(SimiasRss_RESOURCES)
-	$(CSC) /out:$@ $(CSCFLAGS) $(SimiasRss_FLAGS) $(SIMIAS_CLIENT_LIBS) $(SIMIAS_LIBS) $(SimiasRss_LIBPATH:%=/lib:%) $(SimiasRss_LIBS:%=/r:%) $(SimiasRss_RESOURCES:%=$(ICON_FLAG)%) $(SimiasRss_CSFILES_CSC) $(DOC_FILE_CMD)
+Simias.Rss.dll: $(srcdir)/AssemblyInfo.cs $(SimiasRss_CSFILES) $(SimiasRss_RESOURCES)
+	$(CSC) /out:$@ $(CSCFLAGS) $(SimiasRss_FLAGS) $(SIMIAS_CLIENT_LIBS) $(SIMIAS_LIBS) $(SimiasRss_LIBPATH:%=/lib:%) $(SimiasRss_LIBS:%=/r:%) $(SimiasRss_RESOURCES:%=$(ICON_FLAG)%) $(srcdir)/AssemblyInfo.cs $(SimiasRss_CSFILES_CSC) $(DOC_FILE_CMD)
 	
 all: $(SERVER_ASSEMBLIES) 
 
@@ -43,14 +43,17 @@ installcheck-local: install
 .PHONY: test
 test: installcheck
 
-CLEAN_FILES = $(SERVER_ASSEMBLIES) $(DOC_FILE_CLEAN) 
+CLEAN_FILES = $(SERVER_ASSEMBLIES) $(DOC_FILE_CLEAN) AssemblyInfo.cs
 
 clean-local:
 	rm -rf $(CLEAN_FILES) $(COMMON_CLEAN_FILES)
 
-#distclean-local:
-#	rm -rf $(COMMON_DISTCLEAN_FILES)
+distclean-local:
+	rm -rf $(COMMON_DISTCLEAN_FILES)
+	rm -rf AssemblyInfo.cs
+	rm -rf Makefile
 
 maintainer-clean-local:
 	rm -rf $(COMMON_MAINTAINER_CLEAN_FILES)
+	rm -rf AssemblyInfo.cs
 
