Added files AddDataPath.aspx and AddDataPath.aspx.cs in MakeFile.am
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6962 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/Makefile.am
+++ b/simias/src/admin/Makefile.am
@@ -2,6 +2,7 @@
 export MONO_PATH := $(MONO_PATH)
 iFolderAdmin_CSFILES = \
 	$(srcdir)/AccountEnabled.ascx.cs \
+	$(srcdir)/AddDataPath.aspx.cs \
 	$(srcdir)/CreateiFolder.aspx.cs \
 	$(srcdir)/CreateUser.aspx.cs \
 	$(srcdir)/Default.aspx.cs \
@@ -69,6 +70,7 @@ iFolderAdmin_LIBS = \
 
 iFolderAdmin_FORMS = \
 	AccountEnabled.ascx \
+	AddDataPath.aspx \
 	CreateiFolder.aspx \
 	CreateUser.aspx \
 	Default.aspx \
