--- a/simias/src/server/setup/ifolder-web-setup.in
+++ b/simias/src/server/setup/ifolder-web-setup.in
@@ -1,13 +1,26 @@
 #!/bin/sh
-#######################################################################
+#****************************************************************************
 #
-#  $RCSfile$
+# Copyright (c) 2007 Novell, Inc.
+# All Rights Reserved.
 #
-#  Copyright (C) 2007 Novell, Inc.
+# This program is free software; you can redistribute it and/or
+# modify it under the terms of version 2 of the GNU General Public License as
+# published by the Free Software Foundation.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, contact Novell, Inc.
+#
+# To contact Novell about this file by physical or electronic mail,
+# you may find current contact information at www.novell.com
 #
 #  Author: Kalidas Balakrishnan <bkalidas@novell.com>
-#
-#######################################################################
+#***************************************************************************/
 
 export MONO_PATH=@_webbindir_@:@_bindir_@
 export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:@_webbindir_@
