gsoap fix for 64 bit compile
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6986 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/tools/gsoap/gsoap-linux-2.7/src/Makefile
+++ b/simias/tools/gsoap/gsoap-linux-2.7/src/Makefile
@@ -9,7 +9,11 @@ LEX=flex -l
 #       use YACC=bison or YACC=yacc
 YACC=bison
 #	For static linkage with Flex use:
-LIBS=/usr/lib/libfl.a
+ifndef (lib)
+lib=lib
+endif
+
+LIBS=/usr/$(lib)/libfl.a
 #	For static linkage with Lex use:
 #	LIBS=/usr/lib/libl.a
 COFLAGS=-O1
