updated libfliam and simias.c for mac update
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6992 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -240,7 +240,8 @@ case $SIMIAS_OS in
 		# LD='$(CXX) -dynamiclib '
 		StoreProviderAssembly="SimiasLib.dll"
 		StoreProviderType="Simias.Storage.Provider.Flaim.FlaimProvider"
-		GSOAP_PATH="$TOOLDIR/gsoap/macosx-2.7"
+		#GSOAP_PATH="$TOOLDIR/gsoap/macosx-2.7"
+		GSOAP_PATH="$TOOLDIR/gsoap/macosx-x86-2.7"
 		#StoreProviderAssembly="SqliteProvider.dll"
 		#StoreProviderType="Simias.Storage.Provider.Sqlite.SqliteProvider"
 		mappingpath="${exec_prefix}/lib/simias/web/bin/Simias.exe"
