--- a/simias/src/core/libsimias/Makefile.am
+++ b/simias/src/core/libsimias/Makefile.am
@@ -1,4 +1,4 @@
-SIMIAS_WSDL = ../WebService/Simias.wsdl
+SIMIAS_WSDL = ../WebService/Simias.wsdl 
 
 EXTRA_DIST =
 
@@ -27,8 +27,10 @@ envC.c: $(srcdir)/stdsoap2.c
 	$(GSOAP_PATH)/soapcpp2 -c -penv $(srcdir)/env.h
 
 $(srcdir)/stdsoap2.c:
+if !DARWIN
 	make -C $(GSOAP_PATH)/src && cp $(GSOAP_PATH)/src/soapcpp2 $(GSOAP_PATH)
 	make -C $(GSOAP_PATH)/wsdl && cp $(GSOAP_PATH)/wsdl/wsdl2h $(GSOAP_PATH)
+endif
 	cp $(GSOAP_PATH)/stdsoap2.h $(srcdir)
 	cp $(GSOAP_PATH)/stdsoap2.c $(srcdir)
 
