Reverting the Mono Configure and SPEC file changes. This is done to make sure that SVN iFolder trunk can be used to build iFolder in autobuild
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7028 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/Makefile.am
+++ b/Makefile.am
@@ -42,7 +42,7 @@ if !SIMIAS_AS_CLIENT
 	$(INSTALL_PROGRAM) $(srcdir)/dependencies/external/MonoRuntime/MonoRpms32bit.tar  $(DESTDIR)$(bindir)/../lib/Mono/rpms/
 	$(INSTALL_PROGRAM) $(srcdir)/dependencies/external/MonoRuntime/gmcs  $(DESTDIR)$(bindir)/../lib/Mono/bin/
 	$(INSTALL_PROGRAM) $(srcdir)/dependencies/external/MonoRuntime/mod-mono-server2  $(DESTDIR)$(bindir)/../lib/Mono/bin/
-	$(INSTALL_PROGRAM) $(srcdir)/dependencies/external/MonoRuntime/mod_mono.conf  $(DESTDIR)$(bindir)/../lib/Mono/bin/
+	$(INSTALL_PROGRAM) $(srcdir)/dependencies/external/MonoRuntime/mod_mono.conf  $(DESTDIR)$(bindir)/../lib/Mono/bin/mod_mono.conf.in
 endif
 
 uninstall-local:
