--- a/configure.in
+++ b/configure.in
@@ -9,8 +9,10 @@ ASSEMBLY_VERSION=2
 VERSION=$VERSION.$ASSEMBLY_VERSION.0
 AM_MAINTAINER_MODE
 AC_PROG_CC
-AC_CONFIG_MACRO_DIR([m4])
+if test -d m4; then
+echo "adding m4";
 AC_PROG_CXX(am__fastdepCXX)
+fi
 m4_pattern_allow(PKG_CONFIG)
 
 #
