--- a/configure.in
+++ b/configure.in
@@ -10,7 +10,7 @@ VERSION=$VERSION.$ASSEMBLY_VERSION.0
 AM_MAINTAINER_MODE
 AC_PROG_CC
 if test -d m4; then
-echo "adding m4";
+echo "adding m4"
 AC_PROG_CXX(am__fastdepCXX)
 fi
 m4_pattern_allow(PKG_CONFIG)
